- Layout   * little changes in phrase to show for principal page at     frontend page
- Partial
  * little changes in html structure

- Locales
  * added translation for menu in frontend place

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -416,10 +416,9 @@ en:
     new_mark : "New mark"
 
     #Login
-    login : "Ingresar"
-    logout : "Cerrar sesion"
-
-    #Login
     login : "Login"
     logout : "Logout"
+
+    #FrontEnd
+    home: 'Home'
 
