--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -193,6 +193,8 @@ fr:
     stats_in_place: "Il libère : équipements qui ne font pas partie d'un poste de travail. Dans des équipes : ils intègrent un poste de travail"
     msg_text: "You must put a hyphen sign where is need put a text if you don't have this data"
     msg_number: "You must put a cero(0) number where is need put a number if you don\'t have this data"
+    msg_email: 'If you do not have an email address complete this field with something how the next
+    example, without@email.com'
 
   search:
     label: "Chercher"
