- Controller   * added call to logger
- Helpers
  * added new method to show the log file formatted

- Partials
  * added option of hitorical for users

- View
  * refactoring

- Locales
  * added translation for new menu option

- Css
  * added new classes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -348,6 +348,7 @@ en:
     #Users
     users: "Users"
     users_list: "List of Users"
+    users_history: "Historical"
     users_admin?: "Administrator?"
     user: "User : "
 
