--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -243,6 +243,7 @@ es:
 
     users: "Usuarios"
     users_list: "Lista de usuarios"
+    users_history: "Historial"
     users_admin?: "Administrador?"
     user: "Usuario : "
 
