- Partial   * added new information in this partial
- Locales
  * added new translation

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -198,6 +198,9 @@ es:
                    si no conoces esos datos"
     msg_email: 'Si no tienes una direccion de email definida completa con un email ficticio
                 como el siguiente ejemplo, without@email.com'
+    accesskeys_firefox : 'Para Firefox utilizando'
+    accesskeys_iexplorer : 'Para Internet Explorer utilizando'
+    accesskeys_chrome : 'Para Chrone utilizand'
 
 
   search:
