--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -322,6 +322,22 @@ en:
     screens_statistic : "Here you can see the distribution of screens for each place"
     printers_statistic : "Here you can see the distribution of printers for each place"
 
+  front_end:
+    digital_data: 'Digital data'
+    getting_digital_data: 'Getting digital data'
+    you_can_with_digital_data: 'you can download a pdf or spreedsheet file to
+    have a complete list of devices in your company or whatever you are.
+    Those can be lists of a specific place such as an office or an complete
+    description for a computer with all of its components.'
+
+    settings: 'Settings'
+    setting_your_inventory_system: 'Setting your inventory system'
+    you_can_add_users: ', you can add users for work with this software in two levels, admins or
+    simple users. Also, you can add web pages semi statics for the frontend or
+    backend if you like easily and fast where you can add rich format using
+    an rich editor online.'
+
+
   phrases:
     list_of : "List of "
     units: " units "
