- View   * adapted to a new translations
- Locales
  * added new translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -341,6 +341,14 @@ en:
     information_about_providers: 'Information about providers'
     to_know_who_sold_us: ', to know who sold the things that you have in your building or wherever you are. It permit you have adecuate information about who sell you each part or advice that is present between your hardware. Also, you can write information about the companies so you can make fast contact.'
 
+    statistics: 'Statistics'
+    getting_statistics: 'Getting statistics'
+    you_can_get_statistics: ',you can get statistics of distribution, availability,
+    unavailability each kind of devices  as computers, screens, printers and places
+    separated by types of places represented statistics graphics. This is only
+    an extra tools that can give you a visual idea about the density of the content
+    inside a building.'
+
 
   phrases:
     list_of : "List of "
