- README   * little change

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Hardware Inventory Web Application
 
-Copyright (C) 2008 Cesar Diaz
+Copyright (C) 2009 Cesar Enrique Diaz
 
 cesare.diaz [at] gmail [dot] com
 
